--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
+  justify-content: center;
 }
 
 .App-header h2 {
@@ -52,8 +53,26 @@
 }
 
 .movie {
+  display: flex;
+  justify-content: center;
+  background-color: dimgrey;
   padding: 5px 25px 10px 25px;
   max-width: 25%;
+  border: 2px solid whitesmoke;
+  border-radius: 5px;
+}
+
+.movie-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: linear-gradient(45deg, #0000ff, #abd7ec);
+}
+
+.movie-info img {
+  border-radius: 5px;
+  margin: 4px;
+  border: 2px solid whitesmoke;
 }
 
 .errorMessage {
